<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cl_main_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_main_control_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_main_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/noto_bold"
                android:text="IP адрес"
                android:textColor="@color/TextPrimaryLight"
                android:textSize="18sp" />

            <LinearLayout
                android:id="@+id/ll_main_ip_address_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp">

                <EditText
                    android:id="@+id/et_main_first_octet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:hint="192"
                    android:imeOptions="actionNext"
                    android:theme="@style/OctetEditTextTheme" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/noto_regular"
                    android:text="@string/common_dot"
                    android:textColor="@color/TextPrimaryLight"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/et_main_second_octet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:hint="168"
                    android:imeOptions="actionNext"
                    android:theme="@style/OctetEditTextTheme" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/noto_regular"
                    android:text="@string/common_dot"
                    android:textColor="@color/TextPrimaryLight"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/et_main_third_octet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:hint="0"
                    android:imeOptions="actionNext"
                    android:theme="@style/OctetEditTextTheme" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/noto_regular"
                    android:text="@string/common_dot"
                    android:textColor="@color/TextPrimaryLight"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/et_main_fourth_octet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:hint="0"
                    android:imeOptions="actionDone"
                    android:theme="@style/OctetEditTextTheme" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:fontFamily="@font/noto_regular"
                    android:text="@string/common_slash"
                    android:textColor="@color/TextPrimaryLight"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/snr_main_mask"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:minWidth="120dp"
                    android:spinnerMode="dialog" />

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_main_calculate"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:backgroundTint="#3F51B5"
                android:text="Вычислить" />
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/cv_main_control_panel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                style="@style/IpInfoTitleTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_activity_ip_address"/>

            <TextView
                android:id="@+id/resNetworkTextView"
                style="@style/IpInfoValueTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/IpInfoTitleTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_activity_cidr_prefix" />

            <TextView
                android:id="@+id/resMaskTextView"
                style="@style/IpInfoValueTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/IpInfoTitleTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_activity_subnet_mask" />

            <TextView
                android:id="@+id/resWildcardMaskTextView"
                style="@style/IpInfoValueTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/IpInfoTitleTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_activity_wildcard_mask" />

            <TextView
                android:id="@+id/resFirstHostTextView"
                style="@style/IpInfoValueTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/IpInfoTitleTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_activity_network_ip_address" />

            <TextView
                android:id="@+id/resLastHostTextView"
                style="@style/IpInfoValueTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/IpInfoTitleTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_activity_broadcast_ip_address" />

            <TextView
                android:id="@+id/resBroadcastTextView"
                style="@style/IpInfoValueTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/IpInfoTitleTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_activity_max_possible_hosts" />

            <TextView
                android:id="@+id/resNetSizeTextView"
                style="@style/IpInfoValueTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/IpInfoTitleTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_activity_usable_hosts" />

            <TextView
                style="@style/IpInfoValueTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/IpInfoTitleTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_activity_first_host" />

            <TextView
                style="@style/IpInfoValueTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/IpInfoTitleTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_activity_last_host" />

            <TextView
                style="@style/IpInfoValueTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>