<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_about_app_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BackgroundSecondaryLight">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/v_about_app_illustration_container"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_alignParentTop="true"
            android:background="@color/AccentSecondaryLight" />

        <ImageView
            android:layout_width="300dp"
            android:layout_height="150dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="-40dp"
            android:scaleType="centerCrop"
            android:src="@drawable/img_network" />

        <ImageView
            android:id="@+id/iv_about_app_back"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:padding="8dp"
            android:background="?attr/selectableItemBackground"
            android:src="@drawable/ic_arrow_back_24" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_about_app_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/v_about_app_illustration_container"
            android:fontFamily="@font/noto_regular"
            android:gravity="center"
            android:padding="8dp"
            android:textColor="#A4A4A4"
            android:textSize="14sp"
            tools:text="Версия 1.1.0 (сборка 156)" />

        <View
            android:id="@+id/v_about_app_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/tv_about_app_version"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="#A4A4A4" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_about_app_feedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/v_about_app_divider"
            android:background="?attr/selectableItemBackground"
            android:fontFamily="@font/noto_regular"
            android:padding="16dp"
            android:text="@string/fragment_about_app_feedback"
            android:textColor="@color/TextPrimaryLight"
            android:textSize="16sp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_about_app_show_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_about_app_feedback"
            android:background="?attr/selectableItemBackground"
            android:fontFamily="@font/noto_regular"
            android:padding="16dp"
            android:text="@string/fragment_about_app_github"
            android:textColor="@color/TextPrimaryLight"
            android:textSize="16sp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_about_app_rate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_about_app_show_code"
            android:background="?attr/selectableItemBackground"
            android:fontFamily="@font/noto_regular"
            android:padding="16dp"
            android:text="@string/fragment_about_app_rate_app"
            android:textColor="@color/TextPrimaryLight"
            android:textSize="16sp" />

    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>